src/routes/app.css
@import 'tailwindcss';
@import 'tw-animate-css';

@plugin '@tailwindcss/forms';
@plugin '@tailwindcss/typography';

@custom-variant dark (&:is(.dark *));

:root {
  --radius: 0.5rem;

  /* Surface → Background/Card/Popover */
  --background: oklch(92.88% 0.01 255.51deg);
  --foreground: oklch(20.16% 0.01 163.61deg);
  --card: oklch(94.873% 0.00848 236.982);
  --card-foreground: oklch(36.292% 0.01873 157.536);
  --popover: oklch(94.873% 0.00848 236.982);
  --popover-foreground: oklch(36.292% 0.01873 157.536);

  /* Primary (green) */
  --primary: oklch(49.51% 0.12 154.86deg);
  --primary-foreground: oklch(98.23% 0.02 140.81deg);
  --primary-neutral: oklch(41.987% 0.01624 166.617);

  /* Secondary (teal) */
  --secondary: oklch(80.379% 0.07361 159.214);
  --secondary-foreground: oklch(29.161% 0.04508 176.474);
  --secondary-neutral: oklch(64.951% 0.03503 160.856);

  /* Muted (surface grays) */
  --muted: oklch(83.19% 0.01 238.49deg);
  --muted-foreground: oklch(41.52% 0.02 153.87deg);

  /* Accent (blue) */
  --accent: oklch(72.68% 0.07 248.1deg);
  --accent-foreground: oklch(33.62% 0.08 252.16deg);
  --accent-neutral: oklch(55.433% 0.03538 248.511);

  /* Destructive */
  --destructive: oklch(54.975% 0.15522 23.711);
  --destructive-foreground: oklch(88.309% 0.0498 38.246);
  --destructive-neutral: oklch(50.875% 0.06679 19.594);

  /* Success */
  --success: oklch(65.171% 0.15908 151.403);
  --success-foreground: oklch(30.86% 0.11 142.5deg);
  --success-neutral: oklch(54.375% 0.03918 157.882);

  /* Warning */
  --warning: oklch(82.735% 0.12776 76.898);
  --warning-foreground: oklch(43.77% 0.1 65.44deg);
  --warning-neutral: oklch(62.246% 0.03903 75.258);

  /* Borders/Input/Ring */
  --border: oklch(73.51% 0.01 205.74deg);
  --input: oklch(73.51% 0.01 205.74deg);
  --ring: oklch(49.51% 0.12 154.86deg);

  /* Charts */
  --chart-1: oklch(49.51% 0.12 154.86deg);
  --chart-2: oklch(77.15% 0.0813 159.02deg);
  --chart-3: oklch(65.83% 0.09 249.23deg);
  --chart-4: oklch(84.973% 0.12312 114.334);
  --chart-5: oklch(82.33% 0.14 76.57deg);
  --chart-6: oklch(81.077% 0.12588 221.908);
  --chart-7: oklch(64.487% 0.1075 209.444);
  --chart-8: oklch(75.557% 0.16821 56.088);
  --chart-9: oklch(56.393% 0.15746 282.251);
  --chart-10: oklch(65.987% 0.12283 9.17);

  /* Sidebar */
  --sidebar: oklch(92.88% 0.01 255.51deg);
  --sidebar-foreground: oklch(20.16% 0.01 163.61deg);
  --sidebar-primary: oklch(49.51% 0.12 154.86deg);
  --sidebar-primary-foreground: oklch(98.23% 0.02 140.81deg);
  --sidebar-accent: oklch(72.68% 0.07 248.1deg);
  --sidebar-accent-foreground: oklch(33.62% 0.08 252.16deg);
  --sidebar-border: oklch(73.51% 0.01 205.74deg);
  --sidebar-ring: oklch(49.51% 0.12 154.86deg);
}

.dark {
  /* Surface → Background/Card/Popover */
  --background: oklch(20.16% 0.01 163.61deg);
  --foreground: oklch(92.88% 0.01 255.51deg);
  --card: oklch(24.77% 0.01 160.26deg);
  --card-foreground: oklch(92.88% 0.01 255.51deg);
  --popover: oklch(24.77% 0.01 160.26deg);
  --popover-foreground: oklch(92.88% 0.01 255.51deg);

  /* Primary (green) */
  --primary: oklch(49.51% 0.12 154.86deg);
  --primary-foreground: oklch(98.23% 0.02 140.81deg);

  /* Secondary (teal) */
  --secondary: oklch(0.7715 0.0813 159.02);
  --secondary-foreground: oklch(38.64% 0.0634 176.44deg);

  /* Muted (surface grays) */
  --muted: oklch(29.17% 0.01 157.93deg);
  --muted-foreground: oklch(63.24% 0.01 188.78deg);

  /* Accent (blue) */
  --accent: oklch(62.869% 0.10379 249.809);
  --accent-foreground: oklch(33.62% 0.08 252.16deg);

  /* Destructive (error red) */
  --destructive: oklch(54.975% 0.15522 23.711);
  --destructive-foreground: oklch(88.309% 0.0498 38.246);

  /* Success (bright green) */
  --success: oklch(65.171% 0.15908 151.403);
  --success-foreground: oklch(30.86% 0.11 142.5deg);

  /* Warning (yellow) */
  --warning: oklch(84.79% 0.12 78.56deg);
  --warning-foreground: oklch(43.77% 0.1 65.44deg);

  /* Borders/Input/Ring */
  --border: oklch(33.41% 0.02 156.21deg);
  --input: oklch(33.41% 0.02 156.21deg);
  --ring: oklch(49.51% 0.12 154.86deg);

  /* Charts */
  --chart-1: oklch(58.83% 0.11 159deg);
  --chart-2: oklch(78.639% 0.06016 162.503);
  --chart-3: oklch(68.152% 0.07758 249.054);
  --chart-4: oklch(84.973% 0.12312 114.334);
  --chart-5: oklch(84.79% 0.12 78.56deg);
  --chart-6: oklch(76.1% 0.118 223.8deg);
  --chart-7: oklch(64.487% 0.1075 209.444);
  --chart-8: oklch(77.462% 0.1576 57.855);
  --chart-9: oklch(60.704% 0.15684 282.808);
  --chart-10: oklch(70.181% 0.12225 8.924);

  /* Sidebar */
  --sidebar: oklch(24.77% 0.01 160.26deg);
  --sidebar-foreground: oklch(92.88% 0.01 255.51deg);
  --sidebar-primary: oklch(49.51% 0.12 154.86deg);
  --sidebar-primary-foreground: oklch(98.23% 0.02 140.81deg);
  --sidebar-accent: oklch(62.869% 0.10379 249.809);
  --sidebar-accent-foreground: oklch(33.62% 0.08 252.16deg);
  --sidebar-border: oklch(33.41% 0.02 156.21deg);
  --sidebar-ring: oklch(49.51% 0.12 154.86deg);
}

@theme inline {
  --background-image-dcs: url('$lib/assets/dcs.webp');
  --breakpoint-xs: 30rem;
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-primary-neutral: var(--primary-neutral);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-secondary-neutral: var(--secondary-neutral);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent-neutral: var(--accent-neutral);
  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);
  --color-destructive-neutral: var(--destructive-neutral);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --color-chart-6: var(--chart-6);
  --color-chart-7: var(--chart-7);
  --color-chart-8: var(--chart-8);
  --color-chart-9: var(--chart-9);
  --color-chart-10: var(--chart-10);
  --color-success: var(--success);
  --color-success-foreground: var(--success-foreground);
  --color-success-neutral: var(--success-neutral);
  --color-warning: var(--warning);
  --color-warning-foreground: var(--warning-foreground);
  --color-warning-neutral: var(--warning-neutral);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }
  address {
    @apply not-italic;
  }
}

@layer components {
  .preset-tonal-primary {
    @apply border-current dark:border-primary;
    background-color: color-mix(in srgb, var(--primary), var(--background));
    color: hsl(from var(--primary) h 90% 15%);
  }
  .dark .preset-tonal-primary {
    color: hsl(from var(--primary) h 90% 80%);
  }

  .preset-tonal-secondary {
    @apply border-current dark:border-secondary;
    background-color: color-mix(in srgb, var(--secondary), var(--background) 70%);
    color: hsl(from var(--secondary) h 30% 30%);
  }
  .dark .preset-tonal-secondary {
    color: hsl(from var(--secondary) h 70% 90%);
  }

  .preset-tonal-accent {
    @apply border-current dark:border-accent;
    background-color: color-mix(in srgb, var(--accent), var(--background) 40%);
    color: hsl(from var(--accent) h 50% 50%);
  }
  .dark .preset-tonal-accent {
    color: hsl(from var(--accent) h s 85%);
  }

  .preset-tonal-muted {
    background-color: color-mix(in srgb, var(--muted), var(--background));
    color: color-mix(in srgb, var(--muted), var(--foreground) 70%);
  }

  .preset-tonal-success {
    @apply border-success;
    background-color: color-mix(in srgb, var(--success), var(--background));
    color: hsl(from var(--success) h 30% 20%);
  }
  .dark .preset-tonal-success {
    color: hsl(from var(--success) h 90% 80%);
  }

  .preset-tonal-warning {
    @apply border-warning;
    background-color: color-mix(in srgb, var(--warning), var(--background) 55%);
    color: hsl(from var(--warning) h 60% 20%);
  }
  .dark .preset-tonal-warning {
    color: hsl(from var(--warning) h 100% 75%);
  }

  .preset-tonal-destructive {
    @apply border-destructive;
    background-color: color-mix(in srgb, var(--destructive), var(--background) 65%);
    color: hsl(from var(--destructive) h 90% 35%);
  }
  .dark .preset-tonal-destructive {
    color: hsl(from var(--destructive) h s 90%);
  }
}

